fix ProductoService to create a Producto